--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>BeOnline — Livros</title>
+  <title>Owlsight — Livros</title>
 
   <style>
     :root{
@@ -653,7 +653,7 @@
       <!-- NAV -->
       <div class="nav">
         <div class="brand">
-          <img src="{% static 'frontend/images/BeOnline_logo.png' %}" alt="BeOnline" />
+          <img src="{% static 'frontend/images/logo.png' %}" alt="BeOnline" />
           <div class="tag">Biblioteca premium • estilo streaming</div>
         </div>
 
